--- a/build.gradle
+++ b/build.gradle
@@ -28,6 +28,7 @@ dependencies {
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	implementation 'org.springframework.data:spring-data-jpa'
 	implementation 'com.mysql:mysql-connector-j'
+	implementation 'jakarta.persistence:jakarta.persistence-api:3.0.0'
 }
 
 tasks.named('test') {
